crates/memcode/derive/src/tests/comp_fail.stderr
// Copyright (c) 2025-2026 Federico Hoerth <memparanoid@gmail.com>
// SPDX-License-Identifier: GPL-3.0-only
// See LICENSE in the repository root for full license text.

error[E0277]: the trait bound `Beta: MemDrainEncode` is not satisfied
 --> src/tests/comp_fail.rs:4:14
  |
4 |     #[derive(MemCodec)]
  |              ^^^^^^^^ the trait `MemDrainEncode` is not implemented for `Beta`
  |
  = help: the following other types implement trait `MemDrainEncode`:
            Lambda
            Vec<T>
            [T; N]
            [T]
            bool
            u16
            u32
            u64
          and $N others
  = note: required for the cast from `&Beta` to `&dyn MemDrainEncode`
  = note: this error originates in the derive macro `MemCodec` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Beta: ZeroizableMemDrainEncode` is not satisfied
 --> src/tests/comp_fail.rs:4:14
  |
4 |     #[derive(MemCodec)]
  |              ^^^^^^^^ the trait `MemDrainEncode` is not implemented for `Beta`
  |
  = help: the following other types implement trait `MemDrainEncode`:
            Lambda
            Vec<T>
            [T; N]
            [T]
            bool
            u16
            u32
            u64
          and $N others
  = note: required for `Beta` to implement `ZeroizableMemDrainEncode`
  = note: required for the cast from `&mut Beta` to `&mut dyn ZeroizableMemDrainEncode`
  = note: this error originates in the derive macro `MemCodec` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Beta: ZeroizableMemDrainEncode` is not satisfied
 --> src/tests/comp_fail.rs:4:14
  |
4 |     #[derive(MemCodec)]
  |              ^^^^^^^^ the trait `zeroize::DefaultIsZeroes` is not implemented for `Beta`
  |
  = help: the following other types implement trait `zeroize::DefaultIsZeroes`:
            ()
            PhantomPinned
            bool
            char
            f32
            f64
            i128
            i16
          and $N others
  = note: required for `Beta` to implement `zeroize::Zeroize`
  = note: required for `Beta` to implement `ZeroizableMemDrainEncode`
  = note: required for the cast from `&mut Beta` to `&mut dyn ZeroizableMemDrainEncode`
  = note: this error originates in the derive macro `MemCodec` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Beta: ZeroizableMemDrainDecode` is not satisfied
 --> src/tests/comp_fail.rs:4:14
  |
4 |     #[derive(MemCodec)]
  |              ^^^^^^^^ the trait `MemDrainDecode` is not implemented for `Beta`
  |
  = help: the following other types implement trait `MemDrainDecode`:
            Lambda
            Vec<u8>
            [T]
            [u8; N]
            bool
            u16
            u32
            u64
          and $N others
  = note: required for `Beta` to implement `ZeroizableMemDrainDecode`
  = note: required for the cast from `&mut Beta` to `&mut dyn ZeroizableMemDrainDecode`
  = note: this error originates in the derive macro `MemCodec` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Beta: ZeroizableMemDrainDecode` is not satisfied
 --> src/tests/comp_fail.rs:4:14
  |
4 |     #[derive(MemCodec)]
  |              ^^^^^^^^ the trait `zeroize::DefaultIsZeroes` is not implemented for `Beta`
  |
  = help: the following other types implement trait `zeroize::DefaultIsZeroes`:
            ()
            PhantomPinned
            bool
            char
            f32
            f64
            i128
            i16
          and $N others
  = note: required for `Beta` to implement `zeroize::Zeroize`
  = note: required for `Beta` to implement `ZeroizableMemDrainDecode`
  = note: required for the cast from `&mut Beta` to `&mut dyn ZeroizableMemDrainDecode`
  = note: this error originates in the derive macro `MemCodec` (in Nightly builds, run with -Z macro-backtrace for more info)
